Mon Oct 18 18:11:10 MDT 1999	Diego Novillo <dnovillo@cygnus.com>

	* tc_d10v.c (find_opcode): Allow ATSIGN to match expressions of the
	form @abs16, @(abs16) and @(abs16 + imm).

1999-10-21  Gavin Romig-Koch  <gavin@cygnus.com>

	* config/tc-mips.c (ISA_HAS_COPROC_DELAYS) : New.
	(ISA_HAS_64_BIT_REGS) New.
	(gpr_interlocks,md_begin,reg_needs_delay,append_insn,
	mips_emit_delays,macro_build,load_register,load_addresss,
	macro,macro2,mips_ip,s_cprestore,s_cpadd): Simplify
	and/or use new ISA_xxx macros in expressions involving
	ISA, particularly mips_opts.isa.

1999-10-18  Michael Meissner  <meissner@cygnus.com>

	* expr.h (operatorT): Add machine dependent operators md1..md8.
	(expressionS): Make X_op 8 bits instead of 7.  Add a X_md field
	for the machine dependent operators to use.

	* expr.c (op_rank): Add machine dependent operators.

	* config/tc-alpha.c (O_pregister): Define as a machine dependent
	operator.
	(O_cpregister): Ditto.
	(md_begin): Change X_op test that field is wide enough to use
	O_max instead of O_alpha_max.
	(cpu_types): Fill in missing initializer.
	(alpha_num_macros): Make unsigned.
	(md_assemble): Make opnamelen be size_t.
	(md_apply_fix): Cast alpha_num_operands to int before testing.
	(alpha_force_relocation): Ditto.
	(alpha_fix_adjustable): Ditto.
	(alpha_fix_adjustable): Mark unused arguments ATTRIBUTE_UNUSED.
	(tc_gen_reloc): Ditto.
	(tc_get_register): Ditto.
	(emit_ldgp): Ditto.
	(emit_lda): Ditto.
	(emit_ldah): Ditto.
	(emit_ldil): Ditto.
	(s_alpha_ent): Ditto.
	(s_alpha_end): Ditto.
	(s_alpha_frame): Ditto.
	(s_alpha_prologue): Ditto.
	(s_alpha_file): Ditto.
	(s_alpha_gprel32): Ditto.
	(s_alpha_proc): Ditto.
	(s_alpha_set): Ditto.
	(s_alpha_base): Ditto.
	(s_alpha_align): Ditto.
	(s_alpha_arch): Ditto.
	(alpha_align): Ditto.
	(assemble_insn): Suppress unused variable warning.
	(emit_insn): Ditto.
	(assemble_insn): Don't assume X_op and X_unsigned are in a given
	order in the structure.