@@ -28,6 +28,9 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
 
 #include "bfd.h"
 #include "sysdep.h"
+
+#include <ctype.h>
+
 #include "bfdlink.h"
 #include "getopt.h"
 
